# sitemap-generator

./: COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_UPLOAD_GUIDE.md  README.md  README_RENDER_DEPLOYMENT.md  REPLIT_GITHUB_DEPLOY.md  UPLOAD_COMMANDS.md  app.py  crawler.py  deploy_to_render.sh  enhanced_crawler.py  production_optimizations.py  pyproject.toml  railway.toml  render.yaml  sitemap.xml  sitemap_generator.py  test_site.html  vercel.json
static/css/: styles.css
static/js/: script.js
templates/: index.html
