[tool.poetry]
name = "sitemap-generator"
version = "0.1.0"
description = "Professional sitemap generator with ultra-fast subdomain indexing"
authors = ["Sitemap Generator <sitemap@generator.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
trafilatura = "^1.12.2"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.4.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
